--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
      <title>Docker Project</title>
     </head>
     <body>
+	<body bgcolor="pink" test="black">
      <p>Welcome to my Docker Project!<p>
         <p>Today's Date and Time is: <span id='date-time'></span><p>
         <script>
