--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <title>Docker Project</title>
     </head>
     <body>
-	<body bgcolor="yellow" test="black">
+	<body bgcolor="blue" test="black">
      <p>Welcome to my Docker Project!<p>
         <p>Today's Date and Time is: <span id='date-time'></span><p>
         <script>
